tests/parsing/smtlib/poly/errors/012_forall_unclosed_1.psmt2
(set-logic ALL)
(assert (forall ((x int)) x _))
