tests/parsing/smtlib/poly/errors/012_forall_unclosed_1.expected
File "tests/parsing/smtlib/poly/errors/012_forall_unclosed_1.psmt2", line 2, character 28-29:
Error while parsing a term, read the reserved word '_',
      but expected a closing parenthesis to end the universally quantified
      formula.
